# hyperplane-rs

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
crates/hyperplane/: Cargo.toml
crates/hyperplane/src/: lib.rs
crates/paramodel/: Cargo.toml
crates/paramodel-compiler/: Cargo.toml
crates/paramodel-compiler/src/: binding.rs  compiler.rs  enumerator.rs  error.rs  lib.rs  options.rs  trial_element.rs
crates/paramodel-elements/: Cargo.toml
crates/paramodel-elements/src/: attributes.rs  configuration.rs  constraint.rs  dependency.rs  domain.rs  element.rs  error.rs  expression.rs  fingerprint.rs  ids.rs  lib.rs  lifecycle.rs  names.rs  parameter.rs  runtime.rs  trial.rs  types.rs  validation.rs  value.rs
crates/paramodel-executor/: Cargo.toml
crates/paramodel-executor/src/: artifacts.rs  barrier.rs  error.rs  executor.rs  ids.rs  journal.rs  lib.rs  observer.rs  orchestrator.rs  resources.rs  scheduler.rs  state.rs
crates/paramodel-executor/tests/: end_to_end.rs
crates/paramodel-mock/: Cargo.toml
crates/paramodel-mock/src/: artifact_store.rs  barrier.rs  checkpoint_store.rs  execution_repository.rs  journal_store.rs  lib.rs  metadata_store.rs  result_store.rs
crates/paramodel-persistence/: Cargo.toml
crates/paramodel-persistence/src/: artifact_store.rs  checkpoint_store.rs  error.rs  execution_repository.rs  journal_store.rs  lib.rs  metadata_store.rs  page.rs  result_store.rs  result_store_serde.rs
crates/paramodel-persistence/tests/: result_store.rs
crates/paramodel-plan/: Cargo.toml
crates/paramodel-plan/src/: axis.rs  bindings.rs  error.rs  execution.rs  ids.rs  instance.rs  lib.rs  ordering.rs  plan.rs  policies.rs  step.rs
crates/paramodel-store-sqlite/: Cargo.toml
crates/paramodel-store-sqlite/src/: artifact_store.rs  checkpoint_store.rs  execution_repository.rs  journal_store.rs  journal_writer.rs  lib.rs  metadata_store.rs  providers.rs  result_store.rs  state_manager.rs  store.rs
crates/paramodel-store-sqlite/tests/: concurrency_stress.rs  crash_resume.rs  file_backed.rs  smoke_checkpoint.rs  smoke_journal.rs  smoke_results.rs  smoke_subscribe.rs  tck_conformance.rs  writer_through.rs
crates/paramodel-tck/: Cargo.toml
crates/paramodel-tck/src/: artifact_collector_tests.rs  artifact_store_tests.rs  barrier_tests.rs  checkpoint_store_tests.rs  compiler_tests.rs  execution_repository_tests.rs  executor_tests.rs  golden.rs  journal_store_tests.rs  journal_writer_tests.rs  lib.rs  macros.rs  metadata_store_tests.rs  orchestrator_tests.rs  providers.rs  resource_manager_tests.rs  result_store_tests.rs  state_manager_tests.rs
crates/paramodel-tck/tests/: adversarial.rs  algebraic_laws.rs  barrier_concurrent.rs  binding_propagation.rs  compiler_rules.rs  concurrency.rs  config_entry.rs  constraint_canonicalisation.rs  derived_parameter.rs  element_validate.rs  enumerator_invariants.rs  execution_graph_accessors.rs  executor_state.rs  full_stack.rs  fuzz.proptest-regressions  fuzz.rs  goldens.rs  instance_graph.rs  integration_fuzz.rs  label_tag_validation.rs  macros_smoke.rs  on_failure.rs  on_failure_retry.rs  parallel_execution.rs  parameter_invariants.rs  persistence_edges.rs  plug_socket.rs  policies.rs  resource_backpressure.rs  result_store_semantics.rs  resume.rs  scheduler_state.rs  serde_roundtrips.rs  srd_gap_coverage.rs  trial_results.rs  trial_shape.rs  value_edges.rs
crates/paramodel-tck/tests/goldens/: trivial_plan.json
crates/paramodel-trials/: Cargo.toml
crates/paramodel-trials/src/: error.rs  lib.rs  result.rs  status.rs  trial_set.rs
crates/paramodel/src/: lib.rs
docs/design/: SRD-0001-operating-procedure.md  SRD-0002-general-assay.md  SRD-0003-common-types-and-conventions.md  SRD-0004-parameters-and-domains.md  SRD-0005-labels-plugs-and-sockets.md  SRD-0006-trials-and-trial-sets.md  SRD-0007-elements-and-relationships.md  SRD-0008-test-plans-and-axes.md  SRD-0009-atomic-steps-and-execution-graph.md  SRD-0010-compilation-pipeline.md  SRD-0011-executor-orchestrator-scheduler.md  SRD-0012-persistence-traits.md  SRD-0013-tck.md  SRD-0014-element-kind-registry.md  SRD-0100-control-plane-topology.md  SRD-0101-state-boundaries.md  SRD-0102-element-type-registry.md  SRD-0103-param-extraction-from-images.md  SRD-0104-ec2-node-element.md  SRD-0105-agent-and-control-channel.md  SRD-0106-docker-service-element.md  SRD-0107-docker-command-element.md  SRD-0108-controller-api.md  SRD-0109-cli-autocomplete.md  SRD-0110-web-ui-htmx.md  SRD-0111-event-stream-observability.md  SRD-0112-system-service-and-config.md  SRD-0113-end-to-end-study-lifecycle.md  SRD-0114-principals-roles-permissions.md  build-diagrams.sh
docs/design/diagrams/SRD-0001/: srd-lifecycle.mmd
docs/design/diagrams/SRD-0002/: dependency-layering.mmd
docs/design/diagrams/SRD-0004/: parameter-algebra.mmd  resolution-chain.mmd
docs/design/diagrams/SRD-0005/: attributes.mmd  wire-compatibility.mmd
docs/design/diagrams/SRD-0006/: trial-enumeration.mmd
docs/design/diagrams/SRD-0007/: three-graphs.mmd
docs/design/diagrams/SRD-0008/: plan-structure.mmd
docs/design/diagrams/SRD-0009/: per-trial-sequence.mmd  step-kinds.mmd
docs/design/diagrams/SRD-0010/: pipeline.mmd
docs/design/diagrams/SRD-0011/: executor-model.mmd
docs/design/diagrams/SRD-0012/: persistence-traits.mmd
docs/design/diagrams/SRD-0013/: tck-structure.mmd
docs/design/diagrams/SRD-0014/: bundling-flow.mmd
docs/design/diagrams/SRD-0100/: state-classification.mmd  topology.mmd
docs/design/diagrams/SRD-0101/: cascade-regimes.mmd  state-ownership.mmd
docs/design/diagrams/SRD-0102/: kinds-wiring.mmd
docs/design/diagrams/SRD-0103/: extraction-pipeline.mmd
docs/design/diagrams/SRD-0104/: node-state-machine.mmd  provisioning-flow.mmd
docs/design/diagrams/SRD-0105/: channel-lifecycle.mmd  token-lifecycle.mmd
docs/design/diagrams/SRD-0106/: deploy-sequence.mmd  healthcheck-resolution.mmd
docs/design/diagrams/SRD-0107/: command-lifecycle.mmd  output-contract.mmd  stop-convergence.mmd
docs/design/diagrams/SRD-0108/: auth-tiers.mmd  subscribe-replay.mmd
(+16 files in other folders)
