# Copyright (c) Jonathan Shook
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "3"
members  = ["crates/*"]

[workspace.package]
version    = "0.2.0"
edition    = "2024"
license    = "Apache-2.0"
repository = "https://github.com/jshook/hyperplane-rs"
authors    = ["Jonathan Shook"]
publish    = true

[workspace.dependencies]
# Shared across crates. Per-crate Cargo.toml writes `foo.workspace = true`.

# Inter-crate paramodel deps. Centralised here so a workspace version bump
# only changes this file; each crate spec uses `.workspace = true`.
paramodel             = { path = "crates/paramodel",             version = "0.2.0" }
paramodel-elements    = { path = "crates/paramodel-elements",    version = "0.2.0" }
paramodel-plan        = { path = "crates/paramodel-plan",        version = "0.2.0" }
paramodel-trials      = { path = "crates/paramodel-trials",      version = "0.2.0" }
paramodel-compiler    = { path = "crates/paramodel-compiler",    version = "0.2.0" }
paramodel-executor    = { path = "crates/paramodel-executor",    version = "0.2.0" }
paramodel-persistence = { path = "crates/paramodel-persistence", version = "0.2.0" }
paramodel-mock        = { path = "crates/paramodel-mock",        version = "0.2.0" }
paramodel-tck         = { path = "crates/paramodel-tck",         version = "0.2.0" }

anyhow             = "1"
async-trait        = "0.1"
blake3             = "1"
bon                = "3"
futures            = "0.3"
indexmap           = { version = "2", features = ["serde"] }
jiff               = { version = "0.1", features = ["serde"] }
proptest           = "1"
rand               = "0.8"
regex              = "1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "2"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ulid               = { version = "1", features = ["serde"] }

[workspace.lints.rust]
# Lint *groups* must be set at lower priority than individual lints, else
# cargo refuses to resolve their relative precedence.
rust_2024_compatibility       = { level = "warn", priority = -1 }
unsafe_code                   = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

# Selective opt-outs; revisit in practice.
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
must_use_candidate      = "allow"
