# Copyright (c) Jonathan Shook
# SPDX-License-Identifier: Apache-2.0

[package]
name                 = "paramodel-elements"
description          = "Paramodel central algebra: parameters, domains, constraints, attributes, values, trials, elements, and the ElementRuntime trait."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
publish.workspace    = true

[dependencies]
async-trait.workspace  = true
blake3.workspace       = true
bon.workspace          = true
indexmap.workspace     = true
jiff.workspace         = true
rand.workspace         = true
regex.workspace        = true
serde.workspace        = true
thiserror.workspace    = true
ulid.workspace         = true

[dev-dependencies]
proptest.workspace     = true
serde_json.workspace   = true
tokio.workspace        = true

[lints]
workspace = true
