# Copyright (c) Jonathan Shook
# SPDX-License-Identifier: Apache-2.0

[package]
name                 = "paramodel-executor"
description          = "Paramodel executor layer: Executor, Orchestrator, Scheduler, ResourceManager, ArtifactCollector, ExecutionStateManager, JournalWriter, BarrierHandle. v0.1 ships trait surfaces plus simple serial reference impls."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
publish.workspace    = true

[dependencies]
paramodel-elements   = { path = "../paramodel-elements", version = "0.1.0" }
paramodel-plan       = { path = "../paramodel-plan", version = "0.1.0" }
paramodel-trials     = { path = "../paramodel-trials", version = "0.1.0" }
async-trait.workspace = true
jiff.workspace       = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
tokio.workspace      = true
ulid.workspace       = true

[dev-dependencies]
paramodel-compiler    = { path = "../paramodel-compiler", version = "0.1.0" }
async-trait.workspace = true
jiff.workspace        = true
serde_json.workspace  = true
tokio                 = { workspace = true, features = ["macros", "rt"] }
ulid.workspace        = true

[lints]
workspace = true
