# Copyright (c) Jonathan Shook
# SPDX-License-Identifier: Apache-2.0

[package]
name                 = "paramodel-persistence"
description          = "Paramodel persistence layer (SRD-0012): trait surfaces for ArtifactStore, CheckpointStore, ExecutionRepository, JournalStore, MetadataStore, ResultStore. Defines shapes only — backends ship in separate crates (e.g. paramodel-store-sqlite)."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
publish.workspace    = true

[dependencies]
paramodel-elements   = { path = "../paramodel-elements", version = "0.1.0" }
paramodel-plan       = { path = "../paramodel-plan", version = "0.1.0" }
paramodel-trials     = { path = "../paramodel-trials", version = "0.1.0" }
paramodel-executor   = { path = "../paramodel-executor", version = "0.1.0" }
async-trait.workspace = true
futures.workspace    = true
jiff.workspace       = true
serde.workspace      = true
thiserror.workspace  = true
ulid.workspace       = true

[dev-dependencies]
paramodel-trials     = { path = "../paramodel-trials", version = "0.1.0" }
serde_json.workspace = true
tokio                = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
