# Copyright (c) Jonathan Shook
# SPDX-License-Identifier: Apache-2.0

[package]
name                 = "paramodel-plan"
description          = "Paramodel test-plan layer: TestPlan, Axis, ExecutionPolicies, OptimizationStrategy, TrialOrdering, plan-level bindings."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
publish.workspace    = true

[dependencies]
paramodel-elements   = { path = "../paramodel-elements", version = "0.2.0" }
bon.workspace        = true
jiff.workspace       = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
ulid.workspace       = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
