# Copyright (c) Jonathan Shook
# SPDX-License-Identifier: Apache-2.0

[package]
name                 = "paramodel-store-sqlite"
description          = "Paramodel persistence — SQLite backend. Reserves the crate namespace; full schema + trait implementations land in follow-up slices."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
publish              = true

[dependencies]
paramodel-persistence.workspace = true
paramodel-elements.workspace    = true
paramodel-plan.workspace        = true
paramodel-trials.workspace      = true
paramodel-executor.workspace    = true
paramodel-tck.workspace         = true
async-trait.workspace           = true
futures.workspace               = true
jiff.workspace                  = true
serde.workspace                 = true
serde_json.workspace            = true
thiserror.workspace             = true
tokio                           = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-rusqlite                  = { version = "0.6", features = ["bundled"] }
ulid.workspace                  = true

[dev-dependencies]
tempfile = "3"
tokio    = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
