# Copyright (c) Jonathan Shook
# SPDX-License-Identifier: Apache-2.0

[package]
name                 = "paramodel-tck"
description          = "Technology Compatibility Kit (TCK) for paramodel. Exposes conformance tests + the ImplementationProvider family; downstream crates call into the TCK to verify their own paramodel-trait implementations."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
publish.workspace    = true

[dependencies]
paramodel-elements.workspace    = true
paramodel-plan.workspace        = true
paramodel-trials.workspace      = true
paramodel-compiler.workspace    = true
# Workspace-re-exported for proptest strategies and algebraic-law
# coverage defined inside this crate.
paramodel-executor.workspace    = true
paramodel-persistence.workspace = true
paramodel-mock.workspace        = true
async-trait.workspace = true
futures.workspace     = true
jiff.workspace        = true
serde.workspace       = true
serde_json.workspace  = true
tokio                 = { workspace = true, features = ["macros", "rt", "time"] }
ulid.workspace        = true

[dev-dependencies]
indexmap.workspace   = true
proptest.workspace   = true

[lints]
workspace = true
