# Copyright (c) Jonathan Shook
# SPDX-License-Identifier: Apache-2.0

[package]
name                 = "paramodel"
description          = "Paramodel — parameter-modelling, trial enumeration, plan compilation, and plan execution. This crate re-exports every paramodel sub-crate as a module (`paramodel::elements`, `paramodel::plan`, `paramodel::trials`, `paramodel::compiler`, `paramodel::executor`)."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
publish              = true

[dependencies]
paramodel-elements.workspace = true
paramodel-plan.workspace     = true
paramodel-trials.workspace   = true
paramodel-compiler.workspace = true
paramodel-executor.workspace = true

[lints]
workspace = true
